# task-roulette

./: CMakeLists.txt  client.c  pub.c  server.c  sub.c
include/: common_defs.h  player.h  server_utils.h  utils.h
src/: client.c  common_defs.c  player.c  server.c  server_utils.c  utils.c
